--- a/intercloud-webapp/src/main/webapp/pages/de/tu_berlin/cit/intercloud/webapp/template/LoginPanel.html
+++ b/intercloud-webapp/src/main/webapp/pages/de/tu_berlin/cit/intercloud/webapp/template/LoginPanel.html
@@ -11,7 +11,7 @@
         </div>
         <div class="panel-body">
 
-            <div wicket:id="alert"/>
+            <div wicket:id="loginAlert"/>
 
             <form class="form-horizontal" wicket:id="loginForm">
 
@@ -57,7 +57,7 @@
 
                 <div class="form-group">
                     <div class="col-sm-offset-3 col-sm-9">
-                        <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                        <button type="submit" class="btn btn-primary btn-block" wicket:id="loginBtn">Sign in</button>
                     </div>
                 </div>
             </form>
