basic bootstrap nav

--- a/intercloud-webapp/src/main/webapp/pages/de/tu_berlin/cit/intercloud/webapp/template/WelcomePage.html
+++ b/intercloud-webapp/src/main/webapp/pages/de/tu_berlin/cit/intercloud/webapp/template/WelcomePage.html
@@ -4,7 +4,16 @@
 <body>
 
 <wicket:extend>
-    <h2>Welcome</h2>
+    <div class="col-md-3">
+        <label>Example Stacked</label>
+        <wicket:panel wicket:id="navStacked">[nav_panel]</wicket:panel>
+
+        <label>Example List</label>
+        <wicket:panel wicket:id="navList">[nav_panel]</wicket:panel>
+    </div>
+    <div class="col-md-9">
+        <h2>Welcome</h2>
+    </div>
 </wicket:extend>
 
 </body>
