initial webapp item discovery

--- a/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/template/Template.html
+++ b/intercloud-webapp/src/main/java/de/tu_berlin/cit/intercloud/webapp/template/Template.html
@@ -7,18 +7,11 @@
 </head>
 <body>
 
-<div wicket:id="navbar"/>
-
-<div class="container">
-    <wicket:panel wicket:id="header"></wicket:panel>
-</div>
+<header wicket:id="navbar"/>
 
 <div class="container">
     <wicket:child/>
 </div>
 
-<div class="container">
-    <wicket:panel wicket:id="footer"></wicket:panel>
-</div>
 </body>
 </html>
