--- a/intercloud-webapp/src/main/webapp/css/intercloud.css
+++ b/intercloud-webapp/src/main/webapp/css/intercloud.css
@@ -5,3 +5,8 @@
 .form-label {
     margin-bottom: 5px;
 }
+
+.table-noborder td, .table-noborder th, .table-noborder {
+    border: none !important;
+    margin-bottom: 0px;
+}
