--- a/intercloud-webapp/src/main/webapp/css/intercloud.css
+++ b/intercloud-webapp/src/main/webapp/css/intercloud.css
@@ -2,6 +2,12 @@
     height: 25px;
 }
 
+.btn-debug {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+}
+
 .form-label {
     margin-bottom: 5px;
 }
