execute occi request

--- a/intercloud-webapp/src/main/webapp/css/intercloud.css
+++ b/intercloud-webapp/src/main/webapp/css/intercloud.css
@@ -21,3 +21,7 @@ textarea.form-control {
     border: none !important;
     margin-bottom: 0px;
 }
+
+.form-control.invalid {
+    border: 1px solid #C00;
+}
