highlight invalid input fields; fixed add link issue of disappearing values

--- a/intercloud-webapp/src/main/webapp/css/intercloud.css
+++ b/intercloud-webapp/src/main/webapp/css/intercloud.css
@@ -22,6 +22,6 @@ textarea.form-control {
     margin-bottom: 0px;
 }
 
-.form-control.invalid {
-    border: 1px solid #C00;
+label.invalid {
+    color: red !important;
 }
